# Pro-And-Cons-Of-Living-In-Matrix

./: #audacity.py#  #basic.py#  #commander.py#  #nutcracker.py#  .#audacity.py  .#basic.py  Breath.mid  Characters.psd  Hero.psd  Jukebox.psd  Norton Commander.psd  Nutcracker.psd  Scene.psd  audacity.py  basic.py  commander.py  fruityloops.py  jukebox.py  live_outside.py  nutcracker.py  pair.py  puzzle.py  songs.txt  textures.py
Junk/: Norton Commander.psd  ncurses-examples.tar  particles.py
Junk/tip-0.5.0/: AUTHORS  BUGS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  config.h  config.h.in  config.status  configure  configure.in  global.c  proto.h  tip.c  tip.h  utils.c
Junk/tip-0.5.0/.deps/: global.P  shortcut.P  tip.P  utils.P
Pacman_Complete/: animation.py  entity.py~  fruit.py  fruit.py~  ghosts.py  levels.py~  maze1.txt  maze1.txt~  maze1_sprites.txt  modes.py  nodes.py~  pauser.py~  text.py  text.py~  vector.py
REXPaint-v1.50/: REXPaint-README.txt  REXPaint.cfg
SneakyMath-master/: .gitignore  README.md
Text-editor-master/: main.py
Train Game/: audio.cpp  audio.h  entity.cpp  font.h  game.h  gfx.cpp  loader.h  sprite.h  things.cpp
characters/: Characters.psd  character.py  keyboard.py
etc/: audacity.py  couple.py  vector2.py
jukebox/: constants.py  horizontal_button.py  horizontal_selector_switch_button.py  jukebox.py  scroll.py  selector_switch.py  shape.py  song_entry.py  song_holder.py  song_selector.py  utils.py  vertical_button.py  vertical_selector_switch_button.py
main/: #horizontal_button.py#  .gitignore  Breath.mid  (+36 more)
(+214 files in other folders)
